# flac-rs

./: Cargo.toml
bitwriter/: Cargo.toml
bitwriter/src/: lib.rs
examples/: cobble.rs  minimal.rs
src/: encoder.rs  frame.rs  headers.rs  lib.rs  rice.rs  writer.rs
tests/: encoding.rs
